<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/cinza" >
        
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="6dip"
             android:paddingRight="6dip"
             android:paddingTop="6dip"
             android:text="Cadastro de Cliente"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/preto" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="12dip"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:layout_marginTop="6dip"
            android:background="#ff106510" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/clientes256" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:paddingBottom="6dip"
            android:paddingLeft="6dip"
            android:paddingRight="6dip" />
        

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="16dp"
            android:background="@android:drawable/bottom_bar"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textViewQtItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/codigo"
                android:textColor="@color/preto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/bottom_bar"
            android:gravity="center_vertical" >

            <EditText
                android:id="@+id/editCodRep"
                android:layout_width="148dip"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" >

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="16dp"
            android:background="@android:drawable/bottom_bar"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textViewQtItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.31"
                android:text="@string/nomeCliente"
                android:textColor="@color/preto" />

            <TextView
                android:id="@+id/textViewQtItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.28"
                android:text="@string/cnpj_cpf"
                android:textColor="@color/preto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/bottom_bar"
            android:gravity="center_vertical" >

            <EditText
                android:id="@+id/editNomeRep"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:ems="10" />

            <EditText
                android:id="@+id/editCpfRep"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="16dp"
            android:background="@android:drawable/bottom_bar"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textViewQtItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.31"
                android:text="@string/endereco"
                android:textColor="@color/preto" />

            <TextView
                android:id="@+id/textViewQtItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:text="@string/bairro"
                android:textColor="@color/preto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/bottom_bar"
            android:gravity="center_vertical" >

            <EditText
                android:id="@+id/editPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="16dp"
            android:background="@android:drawable/bottom_bar"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textViewQtItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.31"
                android:text="@string/cidade"
                android:textColor="@color/preto" />

            <TextView
                android:id="@+id/textViewQtItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:text="@string/estado"
                android:textColor="@color/preto" />

            <TextView
                android:id="@+id/textViewQtItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:text="@string/uf"
                android:textColor="@color/preto" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/bottom_bar"
            android:gravity="center_vertical" >

            <EditText
                android:id="@+id/editDepartamento"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:ems="10"
                android:inputType="textPersonName" />

            <Spinner
                android:id="@+id/spEmbalagem"
                android:layout_width="0dp"
                android:layout_height="50dip"
                android:layout_weight="1.0" />

            <EditText
                android:id="@+id/editEstoque"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>
        
             <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="16dp"
            android:background="@android:drawable/bottom_bar"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textViewQtItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.31"
                android:text="@string/telComercial"
                android:textColor="@color/preto" />

            <TextView
                android:id="@+id/textViewQtItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:text="@string/celular_radio"
                android:textColor="@color/preto" />

            <TextView
                android:id="@+id/textViewQtItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:text="@string/email"
                android:textColor="@color/preto" />
        </LinearLayout>
        
        
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/bottom_bar"
            android:gravity="center_vertical" >

             <EditText
                 android:id="@+id/editPreco"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1.0"
                 android:ems="10"
                 android:inputType="phone|textPersonName" />

            <EditText
                android:id="@+id/editTel2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:ems="10"
                android:inputType="phone" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:ems="10"
                android:inputType="textEmailSubject|textPersonName" />

        </LinearLayout>

       
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/bottom_bar"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/btnHome"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="Cancela" />

            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:onClick="btn_salvar"
                android:text="Salvar" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>