<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" 
    android:background="@color/cinza">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
          <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:paddingLeft="6dip"
              android:paddingRight="6dip"
              android:paddingTop="6dip"
              android:text="Tabela de Preço"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:textColor="@color/preto" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginBottom="12dip"
                android:layout_marginLeft="6dip"
                android:layout_marginRight="6dip"
                android:layout_marginTop="6dip"
                android:background="#ff106510" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:paddingBottom="6dip"
                android:paddingLeft="6dip"
                android:paddingRight="6dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="16dp"
                android:background="@android:drawable/bottom_bar"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/textViewQtItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tabela14"
                    android:textColor="@color/azul" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/bottom_bar"
                android:gravity="center_vertical" >

                <EditText
                    android:id="@+id/editTextTab14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" >

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="16dp"
                android:background="@android:drawable/bottom_bar"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tabela21"
                    android:textColor="@color/azul" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/bottom_bar"
                android:gravity="center_vertical" >

                <EditText
                    android:id="@+id/editTextTab21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="16dp"
                android:background="@android:drawable/bottom_bar"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tabela28"
                    android:textColor="@color/azul" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/bottom_bar"
                android:gravity="center_vertical" >

                <EditText
                    android:id="@+id/editTextTab28"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="16dp"
                android:background="@android:drawable/bottom_bar"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tabela35"
                    android:textColor="@color/azul" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/bottom_bar"
                android:gravity="center_vertical" >

                <EditText
                    android:id="@+id/editTextTab35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="16dp"
                android:background="@android:drawable/bottom_bar"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tabela42"
                    android:textColor="@color/azul" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/bottom_bar"
                android:gravity="center_vertical" >

                <EditText
                    android:id="@+id/editTextTab42"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:background="@android:drawable/bottom_bar"
                android:gravity="center_vertical|right" >

                <Button
                    android:id="@+id/btnTestaConexao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salva" />

            </LinearLayout>

          

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="16dp"
                android:background="@android:drawable/bottom_bar"
                android:gravity="center_vertical" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/bottom_bar"
                android:gravity="center_vertical" >
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>